--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
     "mongoose": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
