--- a/package.json
+++ b/package.json
@@ -1,39 +1,18 @@
 {
-  "name": "react-internship",
-  "version": "0.1.0",
+  "name": "secure-chat-frontend",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.10.0",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "ethers": "^6.15.0",
-    "express": "^5.1.0",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.540.0",
-    "mongoose": "^8.16.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2",
-    "react-qr-code": "^2.0.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "lucide-react": "^0.263.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
