--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "framer-motion": "^10.15.0",
+    "ethers": "^6.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
