--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "ethers": "^6.7.1",
+    "framer-motion": "^10.15.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1",
-    "framer-motion": "^10.15.0",
-    "ethers": "^6.7.1"
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
